--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,8 @@
 <header>
   <h1>Snapface</h1>
+  <nav>
   <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">home </a>
   <a routerLink="facesnaplist" routerLinkActive="active">FaceSnaps</a>
+    <button (click)="onAddNewFaceSnap()">+</button>
+  </nav>
 </header>
