--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,9 @@
 <div class="landing-block">
+  <form #emailForm="ngForm" (ngSubmit)="onSubmitForm(emailForm)">
+    <label for="emailInput" >Inscrivez vous pour le newsletter !</label>
+    <input type="email" id="emailInput" [(ngModel)]="userEmail" name="userEmail">
+    <button type="submit">Ok!</button>
+  </form>
   <div class="landing-link">
     <button (click)="passerSurSnapface()">continuer vers Snapface</button>
   </div>
